--- a/doc/wiki/eng/03.run_c_source.rst
+++ b/doc/wiki/eng/03.run_c_source.rst
@@ -1,5 +1,5 @@
 =================
-Running an impcomplete c source
+Running an imcomplete c source
 =================
 [`日本語 <../jpn/03.run_c_source.rst>`_]
 
