--- a/doc/wiki/eng/01.introduction.rst
+++ b/doc/wiki/eng/01.introduction.rst
@@ -26,7 +26,7 @@ Introduction
     import ctypes
     test.printf = ctypes.cdll.msvcrt.printf
     
-    test.times()
+    test.hello()
 	
 	
 | output:
