--- a/doc/wiki/jpn/01.introduction.rst
+++ b/doc/wiki/jpn/01.introduction.rst
@@ -35,7 +35,7 @@ Introduction
     import ctypes
     test.printf = ctypes.cdll.msvcrt.printf
     
-    test.times()
+    test.hello()
 	
 	
 | 出力:
