ある程度大規模なソースもコンパイルできるようになった

--- a/doc/wiki/eng/01.introduction.rst
+++ b/doc/wiki/eng/01.introduction.rst
@@ -26,7 +26,7 @@ Introduction
     import ctypes
     test.printf = ctypes.cdll.msvcrt.printf
     
-    test.hello()
+    test.times()
 	
 	
 | output:
